functional calculator - doesn't accept keys yet, click only

--- a/index.html
+++ b/index.html
@@ -11,43 +11,43 @@
     <div class="calculator-body">
         <div class="screen-container">
             <div class="screen">
-                <p class="text prev-text">00</p>
+                <p id="topText" class="text prev-text">.</p>
 
-                <p class="text">0000000</p>
+                <p id="bottomText" class="text">.</p>
             </div>
         </div>
 
         <div class="row r1">
-            <button class="clear">CLEAR</button>
-            <button class="delete">DELETE</button>
+            <button id="clear" class="clear">CLEAR</button>
+            <button id="delete" class="delete">DELETE</button>
         </div>
 
         <div class="row r2">
-            <div class="7 num">7</div>
-            <div class="8 num">8</div>
-            <div class="9 num">9</div>
-            <div class="divide op">/</div>
+            <button class="7 num">7</button>
+            <button class="8 num">8</button>
+            <button class="9 num">9</button>
+            <button class="divide op">/</button>
         </div>
         
         <div class="row r3">
-            <div class="4 num">4</div>
-            <div class="5 num">5</div>
-            <div class="6 num">6</div>
-            <div class="multiply op">x</div>
+            <button class="4 num">4</button>
+            <button class="5 num">5</button>
+            <button class="6 num">6</button>
+            <button class="multiply op">*</button>
         </div>
 
         <div class="row r4">
-            <div class="1 num">1</div>
-            <div class="2 num">2</div>
-            <div class="3 num">3</div>
-            <div class="subtract op">-</div>
+            <button class="1 num">1</button>
+            <button class="2 num">2</button>
+            <button class="3 num">3</button>
+            <button class="subtract op">-</button>
         </div>
 
         <div class="row r5">
-            <div class="dot op">.</div>
-            <div class="0 num">0</div>
-            <div class="equals op">=</div>
-            <div class="plus op">+</div>
+            <button class="dot op">.</button>
+            <button class="0 num">0</button>
+            <button id="equals" class="equals op">=</button>
+            <button class="plus op">+</button>
         </div>
 
 
